Write structure and buttons to HTML

--- a/index.html
+++ b/index.html
@@ -8,6 +8,40 @@
     <title>Calculator</title>
 </head>
 <body>
-    
+    <div class="calculator-container">
+        <div class="display">
+
+        </div>
+        <div class="buttons-container">
+            <div class="left-container">
+                <div class="delete-buttons-container">
+                    <button id="clear-button">AC</button>
+                </div>
+                <div class="number-container">
+                    <button id="7">7</button>
+                    <button id="8">8</button>
+                    <button id="9">9</button>
+                    <button id="4">4</button>
+                    <button id="5">5</button>
+                    <button id="6">6</button>
+                    <button id="1">1</button>
+                    <button id="2">2</button>
+                    <button id="3">3</button>
+                </div>
+                <div class="decimal-zero-container">
+                    <button id="0">0</button>
+                    <button id="decimal-button">.</button>
+                </div>
+            </div>
+            <div class="operators-container">
+                <button id="divide-button">/</button>
+                <button id="multiply-button">X</button>
+                <button id="substract-button">-</button>
+                <button id="sum-button">+</button>
+                <button id="equal-button">=</button>
+            </div>
+        </div>
+    </div>
+    <div class="footer">© 2025 haimamire. All rights reserved.</div>
 </body>
 </html>
