Create query selectors & saving current operation

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
     <div class="calculator-container">
-        <div class="display">
-
-        </div>
+        <div class="display"></div>
         <div class="buttons-container">
             <div class="left-container">
                 <div class="delete-buttons-container">
@@ -24,7 +22,7 @@
                     <button id="4">4</button>
                     <button id="5">5</button>
                     <button id="6">6</button>
-                    <button id="1">1</button>
+                    <button id="one">1</button>
                     <button id="2">2</button>
                     <button id="3">3</button>
                 </div>
