--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
                     <button id="clear-button">AC</button>
                 </div>
                 <div class="number-container">
-                    <button id="7">7</button>
-                    <button id="8">8</button>
-                    <button id="9">9</button>
-                    <button id="4">4</button>
-                    <button id="5">5</button>
-                    <button id="6">6</button>
-                    <button id="one">1</button>
-                    <button id="2">2</button>
-                    <button id="3">3</button>
+                    <button class="number" id="7">7</button>
+                    <button class="number" id="8">8</button>
+                    <button class="number" id="9">9</button>
+                    <button class="number" id="4">4</button>
+                    <button class="number" id="5">5</button>
+                    <button class="number" id="6">6</button>
+                    <button class="number" id="1">1</button>
+                    <button class="number" id="2">2</button>
+                    <button class="number" id="3">3</button>
                 </div>
                 <div class="decimal-zero-container">
-                    <button id="0">0</button>
+                    <button class="number" id="0">0</button>
                     <button id="decimal-button">.</button>
                 </div>
             </div>
