Allow the use of the 4 basic operators

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                 </div>
             </div>
             <div class="operators-container">
-                <button id="divide-button">/</button>
-                <button id="multiply-button">X</button>
-                <button id="substract-button">-</button>
-                <button id="sum-button">+</button>
+                <button class="operator" id="divide-button">/</button>
+                <button class="operator" id="multiply-button">*</button>
+                <button class="operator" id="substract-button">-</button>
+                <button class="operator" id="sum-button">+</button>
                 <button id="equal-button">=</button>
             </div>
         </div>
