Add decimal & dummy buttons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <div class="buttons-container">
             <div class="left-container">
                 <div class="delete-buttons-container">
+                    <button id="backspace-button">&lt</button>
                     <button id="clear-button">AC</button>
+                    <button>⠀</button>
                 </div>
                 <div class="number-container">
                     <button class="number" id="7">7</button>
@@ -27,6 +29,7 @@
                     <button class="number" id="3">3</button>
                 </div>
                 <div class="decimal-zero-container">
+                    <button>⠀</button>
                     <button class="number" id="0">0</button>
                     <button id="decimal-button">.</button>
                 </div>
