--- a/index.html
+++ b/index.html
@@ -12,27 +12,21 @@
         <div class="display"></div>
         <div class="buttons-container">
             <div class="left-container">
-                <div class="delete-buttons-container">
-                    <button id="backspace-button">&lt</button>
-                    <button id="clear-button">AC</button>
-                    <button>⠀</button>
-                </div>
-                <div class="number-container">
-                    <button class="number" id="7">7</button>
-                    <button class="number" id="8">8</button>
-                    <button class="number" id="9">9</button>
-                    <button class="number" id="4">4</button>
-                    <button class="number" id="5">5</button>
-                    <button class="number" id="6">6</button>
-                    <button class="number" id="1">1</button>
-                    <button class="number" id="2">2</button>
-                    <button class="number" id="3">3</button>
-                </div>
-                <div class="decimal-zero-container">
-                    <button>⠀</button>
-                    <button class="number" id="0">0</button>
-                    <button id="decimal-button">.</button>
-                </div>
+                <button class="clear-button" id="backspace-button">&lt</button>
+                <button class="clear-button"id="clear-button">AC</button>
+                <button class="clear-button">⠀</button>
+                <button class="number" id="7">7</button>
+                <button class="number" id="8">8</button>
+                <button class="number" id="9">9</button>
+                <button class="number" id="4">4</button>
+                <button class="number" id="5">5</button>
+                <button class="number" id="6">6</button>
+                <button class="number" id="1">1</button>
+                <button class="number" id="2">2</button>
+                <button class="number" id="3">3</button>
+                <button>⠀</button>
+                <button class="number" id="0">0</button>
+                <button id="decimal-button">.</button>
             </div>
             <div class="operators-container">
                 <button class="operator" id="divide-button">/</button>
